--- a/app/src/main/res/values-sw600dp/styles.xml
+++ b/app/src/main/res/values-sw600dp/styles.xml
@@ -6,6 +6,8 @@
 
     </style>
 
-    <style name="ForecastListStyle"></style>
+    <style name="ForecastListStyle">
+        <item name="android:choiceMode">singleChoice</item>
+    </style>
 
 </resources>
