further UI changes

--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -10,19 +10,21 @@
         android:padding="16dp"
         android:orientation="vertical"
         android:layout_height="match_parent"
-        android:layout_width="match_parent">
+        android:layout_width="match_parent"
+        android:textSize="24sp">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-
-
+            android:textSize="24sp"
+            android:fontFamily="sans-serif-condensed "
             android:id="@+id/detail_day_textview"/>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-
-
+            android:textSize="16sp"
+            android:fontFamily="sans-serif-condensed "
+            android:textColor="@color/dark_grey"
             android:id="@+id/detail_date_textview"/>
         <LinearLayout
             android:layout_marginTop="16dp"
@@ -31,7 +33,7 @@
             android:layout_height="wrap_content">
 
             <LinearLayout
-
+                android:gravity="center_horizontal"
                 android:orientation="vertical"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -40,13 +42,16 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:textSize="96sp"
 
+                    android:textColor="@color/dark_grey"
                     android:id="@+id/detail_high_textview"/>
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-
+                    android:textSize="22sp"
+                    android:textColor="@color/dark_grey"
                     android:id="@+id/detail_low_textview"/>
 
                 </LinearLayout>
@@ -67,7 +72,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:padding="16dp"
-
+                    android:textSize="22sp"
+                    android:textColor="@color/dark_grey"
                     android:id="@+id/detail_forecast_textview"/>
 
                 </LinearLayout>
@@ -77,20 +83,29 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="16dp"
+            android:paddingLeft="16dp"
+            android:paddingBottom="4dp"
+            android:textSize="22sp"
+            android:fontFamily="sans-serif-light"
             android:id="@+id/detail_humidty_textview"
 
             />
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="16dp"
+            android:fontFamily="sans-serif-light"
+            android:paddingLeft="16dp"
+            android:paddingBottom="4dp"
+            android:textSize="22sp"
             android:id="@+id/detail_wind_textview"
             />
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="16dp"
+            android:fontFamily="sans-serif-light"
+            android:paddingLeft="16dp"
+            android:paddingBottom="4dp"
+            android:textSize="22sp"
             android:id="@+id/detail_pressure_textview"
             />
 
