--- a/app/src/main/res/layout/list_item_forecast_today.xml
+++ b/app/src/main/res/layout/list_item_forecast_today.xml
@@ -5,8 +5,9 @@
     android:gravity="center_vertical"
     android:minHeight="?android:attr/listPreferredItemHeight"
     android:layout_height="match_parent"
-    android:padding="16dp"
-    android:background="@drawable/touch_selector">
+
+    android:background="@drawable/today_touch_selector"
+    >
 
     <LinearLayout
         android:orientation="vertical"
@@ -18,19 +19,25 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-
+            android:textAppearance="?android:textAppearanceLarge"
+            android:fontFamily="sans-serif-condensed"
+            android:textColor="@color/white"
             android:id="@+id/list_item_date_textview" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-
+            android:textSize="72sp"
+            android:textColor="@color/white"
+            android:fontFamily="sans-serif-light"
             android:id="@+id/list_item_high_textview" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-
+            android:textSize="36sp"
+            android:textColor="@color/white"
+            android:fontFamily="sans-serif-light"
             android:id="@+id/list_item_low_textview" />
     </LinearLayout>
 
@@ -39,16 +46,21 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:gravity="center_horizontal">
+        android:gravity="center_horizontal|bottom">
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/list_item_icon" />
+            android:id="@+id/list_item_icon"
+            />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="@color/white"
+            android:paddingBottom="16dp"
+            android:textAppearance="?android:textAppearanceLarge"
+
             android:id="@+id/list_item_forecast_textview" />
     </LinearLayout>
 </LinearLayout>
