--- a/app/src/main/res/values/colour.xml
+++ b/app/src/main/res/values/colour.xml
@@ -3,5 +3,8 @@
 
     <color name="grey">#cccccc</color>
     <color name="sunshine_light_blue">#ff64c2f4</color>
+    <color name="sunshine_blue">#ff1ca8f4</color>
+    <color name="white">#ffffff</color>
+    <color name="dark_grey">#646464</color>
 
 </resources>
